[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.13

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M	The Forgotten Server.exe
		data/
	M		global.lua
	M		creaturescripts/scripts/playerdeath.lua
			items/
	M			items.otb
	M			items.xml
	M		movements/movements.xml
	M		npc/lib/npcsystem/modules.lua
	M		weapons/weapons.xml
	M		XML/commands.xml
]

[ Milestone
	Game protocol 9.54 (9.53 works too) support.
	Corrected Lua error function arguments in NPC system modules.
	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
	Magic level skill boost will now show up in market details.
	Element damage and type will now show up in market details (also corrected the message in item description).
	Corrected a lot of items attributes.
	Added tag "log" to commands.
	Replaced the old reverseFluidMap which wasn't working as intended with a new server-to-client map.
	Rewrote how shopItems table worked in NPC ShopModule to work with items of same id but subtype that differs (i.e. different liquids in same fluid container).
	Fixed an issue with numerous Lua functions would make the boolean parameters false.
	War system (Commands in guild channel: !startwar guildname, !stopwar guildname and !acceptwar guildname). New Lua function: isInWar(cid, targetcid).
	Hotkey message will now always show, even if item use wasn't successful.
	Lazy plural name for items with default plural name to save some memory.
	Added CONDITION_BLEEDING.
	Added black skull with new configurable: killsToBlackSkull.
	!online will now show the amount of players online.
	/pos can now take three arguments; x, y, z and teleports a player to that destination if specified. Without the arguments it will show the current position as it used to.
	Fixed a bug with /r, if argument passed was higher than the amount of items in a stack it wouldn't remove the stack.